--- a/backend/.env.deploy.example
+++ b/backend/.env.deploy.example
@@ -3,3 +3,4 @@ DEPLOY_USER="kbuzunov"
 DEPLOY_HOST="158.160.59.159"
 DEPLOY_PATH="/home/kbuzunov/web-plus-pm2-deploy"
 DEPLOY_REF="origin/master"
+DEPLOY_REPO="https://github.com/BKonstantine/web-plus-pm2-deploy.git"
